--- a/frontend/src/pages/matches/style.css
+++ b/frontend/src/pages/matches/style.css
@@ -1,5 +1,5 @@
 .PageContent.MatchesContent {
-    border: 2px solid red;    
+    /* border: 2px solid red;     */
 
     .page_title {
         background-color: var(--color-bg-1);
@@ -32,7 +32,7 @@
             .photo--text {
                 display: flex;
                 align-items: center;
-                gap: 1rem;
+                gap: 1.5rem;
 
                 .photo {
                     /* background-color: yellow; */
