--- a/frontend/src/pages/user/style.css
+++ b/frontend/src/pages/user/style.css
@@ -1,107 +1,29 @@
-.Home {
-    border: 3px solid rgb(38, 198, 247);
-    height: 100dvh;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-.HomeContent {
+.UserContent {
     /* border: 3px solid red; */
-    padding-top: 2rem;
-    padding-bottom: 9rem;
-
-    .container_persons {
-        /* border: 3px solid orange; */
-        padding: 0 3rem;
-
-        .limit_card {
-            position: relative;
-
-            .card_person {
-                border: 3px solid var(--color-border);
-                border-radius: 25px;
-                position: absolute;
-                top: 0;
-                width: 100%;
+    gap: 1.5rem;
     
-                .photo {
-                    background-color: var(--color-b);
-                    border-radius: 22px;
-                    position: relative;
-                    /* line-height: 0;  OU */
-                    display: flex;
-    
-                    img {
-                        border-radius: 22px;
-                        max-width: 100%;
-                    }
-                    .preview {
-                        position: absolute;
-                        width: 100%;
-                        height: 100%;
+    .action {
+        background: #eae1f2;
+        background: linear-gradient(0deg, #eae1f2 0%, #eae1f2d5 92%);
+        box-shadow: 0 0 10px 5px var(--color-bg-1);
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
 
-                        object-fit: cover;
-                    }
-    
-                }
-                .details {
-                    position: absolute;
-                    bottom: 0;
-                    left: 0;
-                    border-radius: 0 0 22px 22px;
+        position: sticky;
+        bottom: 0;
 
-                    width: 100%;
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    gap: 1rem;
+        margin: 0 calc(-1 * var(--p-lateral));
+        padding: 0.5rem var(--p-lateral) 1rem;
 
-                    
-                    background: #000000;
-                    background: linear-gradient(0deg, #00000036 46%, #00000021 85%, #00000000 100%);
-                    padding: 1.5rem;
-                    
-                    color: var(--color-w);
-                    user-select: none; /* Impede a seleção do texto */
-                    cursor: pointer;
+        place-items: center;
 
-                    > p {
-                        font-size: 2rem;
-                        white-space: nowrap;
-                    }
-                    .name_age {
-                        display: flex;
-                        font-size: 2.2rem;
 
-                        .name_profile {
-                            display: inline-block;
-                            font-weight: 800;
-                            width: 100%;
-                            max-width: 18rem;
-                            
-                            text-overflow: ellipsis;
-                            overflow: hidden;
-                            white-space: nowrap;
-                        }
-                    }
-                    .txt_link {
-                        text-decoration: underline;
-                    }
-                }
-            }
-            .card_person.fixed {
-                outline: 4px solid yellow;
-                position: static;
-            }
+        .btn {
+            background-color: var(--color-tertiary);
+            max-width: 60%;
+            box-shadow: .2rem .2rem var(--color-border);
+
+            font-size: 1.8rem;
         }
     }
-
-
-    &:has(.InfoUser) {
-        padding-bottom: 11rem;
-
-        .container_persons {
-            padding: 0;
-        }
-    }    
 }
