--- a/frontend/src/pages/matches/style.css
+++ b/frontend/src/pages/matches/style.css
@@ -40,6 +40,7 @@
                     height: 7rem;
 
                     img {
+                        border: .1rem solid var(--color-primary);
                         border-radius: 50%;
                         max-width: 100%;
                         height: 100%;
@@ -78,6 +79,12 @@
                     }
                 }
             }
+        }
+
+    
+        /* Excessao */
+        &:has(.feedback_content) {
+            height: 100%;
         }
     }
 }
