--- a/frontend/src/components/Modals/ModalPhotoForms/modalphotoforms.css
+++ b/frontend/src/components/Modals/ModalPhotoForms/modalphotoforms.css
@@ -15,7 +15,7 @@
     /* place-items: center; */
 
     .bg-modal {
-        background-color: #000000b0;
+        /* background-color: #000000b0; */
         /* border: 4px solid yellow; */
         position: absolute;
         top: 0;
