--- a/frontend/src/components/Modals/ModalPhoto/modalphoto.css
+++ b/frontend/src/components/Modals/ModalPhoto/modalphoto.css
@@ -1,5 +1,7 @@
 .Modal {
     /* border: 4px solid red; */
+    background-color: #4d1f6e9a;
+    overflow-y: auto;
     position: fixed;
     top: 0;
     left: 0;
@@ -15,7 +17,6 @@
     /* place-items: center; */
 
     .bg-modal {
-        background-color: #000000b0;
         /* border: 4px solid yellow; */
         position: absolute;
         top: 0;
