--- a/frontend/src/components/LoadingScreen/LoaderFeedback/loaderfeedback.css
+++ b/frontend/src/components/LoadingScreen/LoaderFeedback/loaderfeedback.css
@@ -1,5 +1,5 @@
 .LoaderFeedback {
-    background-color: #ff5e00;
+    /* background-color: #ff5e00; */
     display: flex;
     flex-direction: column;
     justify-content: center;
