--- a/frontend/src/components/LoadingScreen/loadingscreen.css
+++ b/frontend/src/components/LoadingScreen/loadingscreen.css
@@ -1,5 +1,5 @@
 .LoadingScreen {
-    border: 4px solid #ff5e00;
+    /* border: 4px solid #ff5e00; */
     position: fixed;
     top: 0;
     left: 0;
