hotfix: Correção de um bug na page /forms

--- a/frontend/src/components/LoadingScreen/loadingscreen.css
+++ b/frontend/src/components/LoadingScreen/loadingscreen.css
@@ -12,4 +12,6 @@
     place-items: center;
 
     background-color: #ffffff9d;
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
 }
